--- a/build.gradle
+++ b/build.gradle
@@ -2,26 +2,60 @@ buildscript {
     repositories {
         mavenCentral()
     }
+    dependencies {
+        classpath 'org.junit.platform:junit-platform-gradle-plugin:1.0.2'
+    }}
+
+plugins {
+    id 'application'
+    id 'java'
+    id 'idea'
 }
 
 repositories {
     mavenCentral()
 }
 
+apply plugin: 'application'
 apply plugin: 'java'
+apply plugin: 'idea'
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
+
+sourceSets {
+    main{
+        java {
+            srcDir 'src/main'
+        }
+    }
+    test {
+        java {
+            srcDir 'src/test/'
+        }
+    }
+}
+
+application {
+    mainClassName = 'org.rustygnome.tur.Application'
+}
+
+test {
+    useJUnitPlatform()
+}
 
 dependencies {
     implementation 'commons-cli:commons-cli:1.4'
     implementation 'org.apache.poi:poi-ooxml:4.1.1'
     implementation 'org.apache.poi:poi:4.1.1'
+    implementation 'org.jetbrains:annotations:18.0.0'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.5.2'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.5.2'
     testImplementation 'org.junit.jupiter:junit-jupiter-params:5.5.2'
-    testImplementation 'org.junit.jupiter:junit-jupiter:5.5.2'
     testImplementation 'org.mockito:junit-jupiter:2.20.0'
     testImplementation 'org.mockito:mockito-core:2.2.7'
+    testRuntime 'org.junit.jupiter:junit-jupiter-engine:5.5.2'
+    testRuntime 'org.junit.platform:junit-platform-runner:1.5.2'
 }
 
 jar {
