--- a/build.gradle
+++ b/build.gradle
@@ -78,7 +78,7 @@ task allJar(type: Jar) {
         attributes 'Main-Class': 'org.rustygnome.tur.Application'
     }
     from {
-        configurations.compile.collect {
+        configurations.runtimeClasspath.collect {
             it.isDirectory() ? it : zipTree(it)
         }
     }
