--- a/build.gradle
+++ b/build.gradle
@@ -54,6 +54,7 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-params:5.5.2'
     testImplementation 'org.mockito:junit-jupiter:2.20.0'
     testImplementation 'org.mockito:mockito-core:2.2.7'
+    testImplementation 'org.reflections:reflections:0.9.11'
     testRuntime 'org.junit.jupiter:junit-jupiter-engine:5.5.2'
     testRuntime 'org.junit.platform:junit-platform-runner:1.5.2'
 }
