--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -14,7 +14,7 @@ jobs:
       with:
         java-version: 1.8
     - name: Build artifact with Gradle
-      run: ./gradlew jar allJar
+      run: ./gradlew jar
     - name: Upload artifact
       uses: actions/upload-artifact@v1.0.0
       with: 
