--- a/build.gradle
+++ b/build.gradle
@@ -5,11 +5,10 @@ buildscript {
     dependencies {
         classpath 'org.junit.platform:junit-platform-gradle-plugin:1.0.2'
         classpath 'com.github.jengelman.gradle.plugins:shadow:4.0.1'
-    }}
+    }
+}
 
 plugins {
-    id 'application'
-    id 'java'
     id 'idea'
 }
 
@@ -17,13 +16,29 @@ repositories {
     mavenCentral()
 }
 
-apply plugin: 'application'
 apply plugin: 'java'
-apply plugin: 'idea'
+apply plugin: 'application'
+
+// deployment
 apply plugin: 'com.github.johnrengelman.shadow'
+
+// IDE support
+apply plugin: 'idea'
+apply plugin: 'application'
+
+// Static Analysis
+apply plugin: 'pmd'
+apply plugin: 'checkstyle'
+
+def defaultEncoding = 'UTF-8'
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
+
+project.group = 'Rusty Gnome'
+project.version = '0.0.7'
+project.archivesBaseName = 'tur-extractor'
+project.mainClassName = 'org.rustygnome.tur.Application'
 
 sourceSets {
     main{
@@ -63,16 +78,19 @@ dependencies {
 
 jar {
     manifest {
-        attributes 'Implementation-URL': 'https://github.com/arkascha/TuR-Extractor'
-        attributes 'Implementation-Title': 'TuR-Extractor'
-        attributes 'Implementation-Vendor': 'Rusty Gnome'
-        attributes 'Implementation-Version': '0.0.7'
-        attributes 'Main-Class': 'org.rustygnome.tur.Application'
+        attributes(
+                'Implementation-Title': project.archivesBaseName,
+                'Implementation-Vendor': project.group,
+                'Implementation-Version': project.version,
+                'Main-Class': project.mainClassName
+        )
     }
     enabled = false
     dependsOn([shadowJar])
+    archiveFileName = "${project.archivesBaseName}-${project.version}.${archiveExtension}"
 }
 
 shadowJar {
     mergeServiceFiles()
+    minimize()
 }
