--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,21 +1,21 @@
-name: Java CI
-
-on: [push]
-
+on:
+  push:
+    branches:
+      - master
+name: Build Artefacts
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v1
+    - name: Check out sources
+      uses: actions/checkout@v1
     - name: Set up JDK 1.8
       uses: actions/setup-java@v1
       with:
         java-version: 1.8
-    - name: Build artifact with Gradle
+    - name: Build using gradle
       run: ./gradlew jar
-    - name: Upload artifact
+    - name: Make artifacts downloadable
       uses: actions/upload-artifact@v1.0.0
       with: 
         name: TUR-Extractor
